test/conformance/chainsaw/cleanup/validation/cron-format/policy.yaml
apiVersion: kyverno.io/v2beta1
kind: CleanupPolicy
metadata:
  name: cleanuppolicy
  namespace: default
spec:
  match:
    any:
    - resources:
        kinds:
          - Pod
  conditions:
    any:
    - key: "{{ target.metadata.name }}"
      operator: Equals
      value: example
  schedule: "*/2 * * * *"
