test/conformance/chainsaw/cleanup/validation/cron-format/02-clusterpolicy.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: clusterpolicy
spec:
  timeouts: {}
  try:
  - apply:
      check: null
      file: clusterpolicy.yaml
  - assert:
      file: clusterpolicy.yaml
