test/conformance/chainsaw/cleanup/validation/cron-format/03-invalidpolicy.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: invalidpolicy
spec:
  timeouts: {}
  try:
  - apply:
      check:
        ($error != null): true
      file: invalidpolicy.yaml
